--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ]
+  },  
   "dependencies": {
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
@@ -17,8 +24,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/jest": "^26.0.24",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-test-renderer": "^17.0.1",
+    "jest": "^27.0.6",
+    "jest-expo": "^42.1.0",
+    "react-test-renderer": "~16.11.0",
     "typescript": "~4.0.0"
   },
   "private": true
