--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "expo": "~42.0.1",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
+    "node-sass": "^6.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12",
+    "react-native-screens": "^3.4.0",
+    "react-native-web": "^0.17.1",
     "tailwind-rn": "^3.0.1"
   },
   "devDependencies": {
