--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-svg-pan-zoom": "^0.1.2",
     "react-native-web": "~0.13.12",
     "tailwind-rn": "^3.0.1"
   },
