--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^6.0.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.4",
+    "@types/jwt-decode": "^3.1.0",
     "clsx": "^1.1.1",
     "expo": "~42.0.1",
     "expo-auth-session": "~3.3.1",
@@ -28,6 +29,7 @@
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
     "iconic-icons-rn": "^1.1.0",
+    "jwt-decode": "^3.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
