--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@expo-google-fonts/poppins": "^0.2.0",
     "@react-navigation/bottom-tabs": "^6.0.3",
     "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.0.4",
+    "@react-navigation/native-stack": "^6.1.0",
     "@types/jwt-decode": "^3.1.0",
     "clsx": "^1.1.1",
     "expo": "~42.0.1",
@@ -36,10 +36,10 @@
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-svg-pan-zoom": "^0.1.2",
     "react-native-web": "~0.13.12",
-    "tailwind-rn": "^3.0.1",
-    "react-native-svg": "12.1.1"
+    "tailwind-rn": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
